--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -31,10 +31,6 @@
   }
 }
 
-.page_index .page__body {
-  overflow: hidden;
-}
-
 /* ALL ELEMENTS */
 
 * {
